--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 
     <properties>
         <kotlin.version>1.2.61</kotlin.version>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <goeuro.connect.sdk.version>0.2.8-SNAPSHOT</goeuro.connect.sdk.version>
         <comboios-api.version>1.0-SNAPSHOT</comboios-api.version>
     </properties>
